--- a/2303a52005_GEN_A1_.ipynb
+++ b/2303a52005_GEN_A1_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLsBlygsNRHijOLRoPFXgy",
+      "authorship_tag": "ABX9TyMmwMX8V6T9zKw8DhMIh/P6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "  MAE = MAE + abs(Y_act[i] - Y_pred[i])\n",
         "MSE = MSE/n\n",
         "MAE = MAE/n\n",
-        "RMSE=MSE**0.5\n"
+        "RMSE=MSE**0.5"
       ],
       "metadata": {
         "id": "gRp93KSHct1A"
@@ -106,11 +106,33 @@
     {
       "cell_type": "code",
       "source": [
-        "confusion_matrix = [\n",
-        "    [2, 2, 1],\n",
-        "    [1, 3, 2],\n",
-        "    [1, 2, 2]\n",
-        "]\n",
+        "import numpy as np\n",
+        "yact=[0,0,0,0,0,1,1,1,1,1,1,2,2,2,2,2]\n",
+        "ypred=[0,0,1,1,2,2,0,1,1,1,2,0,2,1,1,2]\n",
+        "\n",
+        "l=[]\n",
+        "for i in range(len(yact)):\n",
+        "    l.append([yact[i],ypred[i]])\n",
+        "print(l)\n",
+        "\n",
+        "[[0, 0], [0, 0], [0, 1], [0, 1], [0, 2], [1, 2], [1, 0], [1, 1], [1, 1], [1, 1], [1, 2], [2, 0], [2, 2], [2, 1], [2, 1], [2, 2]]\n",
+        "\n",
+        "cm=[[l.count([0,0]),l.count([0,1]),l.count([0,2])],[l.count([1,0]),l.count([1,1]),l.count([1,2])],[l.count([2,0]),l.count([2,1]),l.count([2,2])]]\n",
+        "print(\"confusionmatrix of above data is:\\n\",np.array(cm))\n",
+        "\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "def calculate_precision_recall_f1(cm):\n",
+        "    num_classes = len(cm)\n",
+        "    precision = [0] * num_classes\n",
+        "    recall = [0] * num_classes\n",
+        "    f1_score = [0] * num_classes  # Initialize F1-score list\n",
+        "    tp_mat = []\n",
+        "    fp_mat = []\n",
+        "    fn_mat = []\n",
+        "    tn_mat = []\n",
+        "\n",
         "\n",
         "num_classes = len(confusion_matrix)\n",
         "\n",
@@ -153,7 +175,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hU7XkjEncdz_",
-        "outputId": "4e3743c4-9d15-4eb3-ae07-2d94d33abdc7"
+        "outputId": "50793a5f-a374-40be-a317-f72402ca0b0f"
       },
       "execution_count": null,
       "outputs": [
@@ -161,6 +183,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[[0, 0], [0, 0], [0, 1], [0, 1], [0, 2], [1, 2], [1, 0], [1, 1], [1, 1], [1, 1], [1, 2], [2, 0], [2, 2], [2, 1], [2, 1], [2, 2]]\n",
+            "confusionmatrix of above data is:\n",
+            " [[2 2 1]\n",
+            " [1 3 2]\n",
+            " [1 2 2]]\n",
             "Accuracy: 0.4375\n",
             "Class 0:\n",
             "  Precision: 0.5\n",
